--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Portfolio FR</title>
+  <title>Portfolio Filip</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -27,26 +27,26 @@
   <div  class= "mainContent">
 <div class="mainSection">
   <h2>About me</h2>
-  <img src="http://www.onlycroatia.com/media/cities/124/1518.jpg" class="pic" alt="Beograd">
+  <img src="assets/images/Filip Photo.JPG" class="pic" alt="Beograd">
   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
     <br>
 
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 
    
-  </div>
-  <section class="sidebar">
-    <div id="connect">
-      <h2>Connect with Me</h2>
-      <a href="https://github.com/filipratkovic" target="_blank">
-                <img src="assets/images/github.png" class="connect_icons"  alt="github"></a>
-      <a href="https://www.linkedin.com/in/filip-ratkovic-058702197/" target="_blank">
-                <img src="assets/images/linkedin.png" class="connect_icons" alt="linkedin"></a>
-      <a href="https://stackoverflow.com/users/12283914/filip" target="_blank">
-                <img src="assets/images/stack.png" class="connect_icons" alt="stack"></a>
-    </div>
-  </section>
+
 </div>
+<section class="sidebar">
+  <div id="connect">
+    <h2>Connect with Me</h2>
+    <a href="https://github.com/filipratkovic" target="_blank">
+              <img src="assets/images/github.png" class="connect_icons"  alt="github"></a>
+    <a href="https://www.linkedin.com/in/filip-ratkovic-058702197/" target="_blank">
+              <img src="assets/images/linkedin.png" class="connect_icons" alt="linkedin"></a>
+    <a href="https://stackoverflow.com/users/12283914/filip" target="_blank">
+              <img src="assets/images/stack.png" class="connect_icons" alt="stack"></a>
+  </div>
+</section>
 </div>
 
 </body>
